--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.40.1",
-    "@vitejs/plugin-vue": "3.1.2",
-    "@vue/test-utils": "2.2.0",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.41.0",
     "cross-env": "7.0.3",
-    "electron": "21.2.0",
-    "electron-builder": "23.6.0",
-    "eslint": "8.26.0",
-    "eslint-plugin-vue": "9.6.0",
+    "electron": "^6.1.12",
+    "electron-builder": "^22.10.3",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
     "happy-dom": "7.6.0",
     "nano-staged": "0.8.0",
     "playwright": "1.27.1",
@@ -44,11 +45,11 @@
     "typescript": "4.8.4",
     "unplugin-auto-expose": "0.0.3",
     "vite": "3.1.8",
-    "vitest": "0.24.3",
-    "vue-tsc": "1.0.9"
+    "vitest": "0.24.3"
   },
   "dependencies": {
     "electron-updater": "5.3.0",
-    "vue": "3.2.41"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
