Refactor: mengembalikan versi "electron" dan "electron-builder" ke versi awal

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint . --ext js,mjs,cjs,ts,mts,cts,vue",
     "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck:renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+    "typecheck:renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
     "typecheck": "npm run typecheck:main && npm run typecheck:preload && npm run typecheck:renderer",
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs",
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
@@ -34,8 +34,8 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.41.0",
     "cross-env": "7.0.3",
-    "electron": "^6.1.12",
-    "electron-builder": "^22.10.3",
+    "electron": "21.2.0",
+    "electron-builder": "23.6.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "happy-dom": "7.6.0",
