--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "keywords": [
+    "Markdown",
+    "remark",
+    "CodeMirror",
+    "Electron",
+    "Vite",
+    "TypeScript"
+  ],
   "name": "vite-electron-builder",
   "description": "Secure boilerplate for Electron app based on Vite",
   "private": true,
@@ -20,7 +28,7 @@
     "test:preload": "vitest run -r packages/preload --passWithNoTests",
     "test:renderer": "vitest run -r packages/renderer --passWithNoTests",
     "watch": "node scripts/watch.mjs",
-    "lint": "eslint . --ext js,mjs,cjs,ts,mts,cts,vue",
+    "lint": "eslint . --ext js,mjs,cjs,ts,mts,cts",
     "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
     "typecheck:renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
@@ -29,15 +37,15 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "cross-env": "7.0.3",
     "electron": "21.2.0",
     "electron-builder": "23.6.0",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "happy-dom": "7.6.0",
     "nano-staged": "0.8.0",
     "playwright": "1.27.1",
@@ -49,7 +57,25 @@
   },
   "dependencies": {
     "electron-updater": "5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@codemirror/commands": "^0.19.1",
+    "@codemirror/gutter": "^0.19.0",
+    "@codemirror/highlight": "^0.19.1",
+    "@codemirror/history": "^0.19.0",
+    "@codemirror/lang-javascript": "^0.19.1",
+    "@codemirror/lang-markdown": "^0.19.1",
+    "@codemirror/language": "^0.19.2",
+    "@codemirror/language-data": "^0.19.0",
+    "@codemirror/matchbrackets": "^0.19.1",
+    "@codemirror/state": "^0.19.0",
+    "@codemirror/theme-one-dark": "^0.19.0",
+    "assert": "^2.0.0",
+    "github-markdown-css": "^4.0.0",
+    "process": "^0.11.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remark-gfm": "^2.0.0",
+    "remark-parse": "^10.0.0",
+    "remark-react": "^9.0.0",
+    "unified": "^10.1.0"
   }
 }
